@@ -13,10 +13,16 @@
 ##############################################################################
 """Zope Container Package
 
-This package uses pkgutil so that the package can be split over
+This package uses setuptools / pkgutil so that the package can be split over
 multiple directories.
+
+See http://peak.telecommunity.com/DevCenter/setuptools#namespace-packages
 
 $Id$
 """
-from pkgutil import extend_path
-__path__ = extend_path(__path__, __name__)
+
+try:
+    __import__('pkg_resources').declare_namespace(__name__)
+except ImportError:
+    from pkgutil import extend_path
+    __path__ = extend_path(__path__, __name__)
